# rust-and-grpc

./: Cargo.toml  Makefile  README.md  build.rs
proto/: cri.proto
src/: cri-client.rs  cri-server.rs
